# cmake-bcp

./: .gitignore  CMakeLists.txt  README.md
include/boost/config/: auto_link.hpp
miniboost/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
